package edu.fiuba.algo3.modelo.opcion.estado;

public class Correcta extends Estado {
    @Override
    public int contarCorrecta() {
        return 1;
    }
}
