package edu.fiuba.algo3.modelo.opcion.estado;

public abstract class Estado {
     public int contarCorrecta(){
          return 0;
     }
     public int contarIncorrecta(){
          return 0;
     }
}
