package edu.fiuba.algo3.modelo.opcion.estado;

public class Incorrecta extends Estado {

    @Override
    public int contarIncorrecta() {
        return 1;
    }
}
